# wordle_game

./: CMakeLists.txt  Main.qml  README.md  main.cpp  parallelengine.cpp  parallelengine.h  wordlegame.cpp  wordlegame.h
qml/: GameBoard.qml  GameKeyboard.qml  GameResultDialog.qml  KeyButton.qml  LetterTile.qml  ModeSelector.qml  ThemeIcon.qml
resources/: words.txt
实验模板/: 实验手册.docx
实验模板/src/: run.sh
实验模板/src/parallel/: pi_omp.cpp
实验模板/src/sequential/: pi.cpp
